test/types/POD/elliot/varNotPOD.good
varNotPOD.chpl:4: error: Could not coerce 'R' to 'chpl_anyPOD' in initialization
